Bug 101976 - LibreOffice crashes when user tries to change read-only Online Update setting
Summary: LibreOffice crashes when user tries to change read-only Online Update setting
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.0.2.2 release
Hardware: All All
: medium critical
Assignee: Andras Timar
URL:
Whiteboard: target:5.3.0
Keywords:
: 95390 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-09-07 19:44 UTC by Andras Timar
Modified: 2016-09-21 21:44 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2016-09-07 19:44:29 UTC
Create a file named online.xcu with the following contents and put it under share/registry/data:

<?xml version="1.0" encoding="UTF-8"?>
<oor:items xmlns:oor="http://openoffice.org/2001/registry" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <item oor:path="/org.openoffice.Office.Jobs/Jobs/org.openoffice.Office.Jobs:Job['UpdateCheck']/Arguments">
    <prop oor:name="AutoCheckEnabled" oor:op="fuse" oor:type="xs:boolean" oor:finalized="true">
      <value>false</value>
    </prop>
  </item>
</oor:items>

This disables "Check for updates automatically" at Tools - Options - LibreOffice - Online Update. Then start LibreOffice and tick this checkbox. After pressing OK, LibreOffice will crash, because it tried to write a read-only config item.
Comment 1 Aron Budea 2016-09-08 08:53:22 UTC
Reproduced with LO 5.2.1.2 & 5.0.2.2 / Ubuntu 14.04.
Fatal Error, message: "configmgr modification of finalized item".
=> severity: critical
Comment 2 Andras Timar 2016-09-11 09:01:00 UTC
Miklos created a patch on the train back home from Brno LO conference, it will be pushed soon.
Comment 3 Commit Notification 2016-09-13 08:08:30 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0ae863c8ac4b712d67041e8bcf4069afbe71b494

tdf#101976 cui: fix crash when setting AutoCheckEnabled and it is read-only

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Miklos Vajna 2016-09-20 10:09:08 UTC
Andras plans to take care of the remaining cases.
Comment 5 Stephan Bergmann 2016-09-20 15:06:47 UTC
*** Bug 95390 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2016-09-21 21:43:54 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e58bd7a00eba8d2fd0f1db2e8121c81077a3101d

tdf#101976 related: check for read-only state of all Online Update settings

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.