tdf#101976 cui: fix crash when setting AutoCheckEnabled and it is read-only

With instdir/share/registry/data/registrymodifications.xcu being:

<?xml version="1.0" encoding="UTF-8"?>
<oor:items xmlns:oor="http://openoffice.org/2001/registry" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <item oor:path="/org.openoffice.Office.Jobs/Jobs/org.openoffice.Office.Jobs:Job['UpdateCheck']/Arguments">
    <prop oor:name="AutoCheckEnabled" oor:op="fuse" oor:type="xs:boolean" oor:finalized="true">
      <value>false</value>
    </prop>
  </item>
</oor:items>

and then trying to set 'Check for updates automatically' in Tools ->
Options -> LibreOffice -> Online Update.

Change-Id: Ifb196b6351c8a9182dfcf2ddf0a1e0555bcccedd
Reviewed-on: https://gerrit.libreoffice.org/28856
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Jenkins <ci@libreoffice.org>